# template-mkdocs

./: .editorconfig  .gitattributes  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cspell.json  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  lint.yml
docs/: index.md
